# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//services/service_manager/public/service_manifest.gni")

source_set("impl") {
  visibility = [
    "//samples/master",
    "//samples_affiliate/master",
  ]

  public = [
    "service.h",
    "service_delegate.h",
  ]

  sources = [
    "service.cc",
  ]

  configs += [ "//build/config/compiler:wexit_time_destructors" ]

  public_deps = [
    "//base",
    "//services/service_manager/public/cpp",
  ]

  deps = [
    "//mojo/public/cpp/bindings",
    "//services/samples/public/mojom",
  ]
}

service_manifest("manifest") {
  name = "samples"
  source = "manifest.json"
}
