# Copyright (c) 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("url_ipc") {
  sources = [
    "url_ipc_export.h",
    "url_param_traits.cc",
    "url_param_traits.h",
  ]

  defines = [ "URL_IPC_IMPLEMENTATION" ]

  public_deps = [
    "//ipc",
    "//url",
  ]
  deps = [
    "//base",
  ]
}
